feat: atualizar estilo e funcionalidade da calculadora, incluindo melhorias na interface e navegação

--- a/amortizacao.html
+++ b/amortizacao.html
@@ -23,7 +23,7 @@
       <p>Sistema de Amortização Constante (SAC)</p>
     </div>
 
-    <button class="btn-back" onclick="window.location.href='index.html'">
+    <button class="btn-back" onclick="history.back()">
       ← Voltar
     </button>
 
@@ -101,6 +101,9 @@
       <div class="additional-tools-footer">
         <span class="tools-label">Ferramentas:</span>
         <div class="tools-links">
+          <a href="index.html" class="tool-footer-link">
+            Calculadora Financeira
+          </a>
           <a href="amortizacao.html" class="tool-footer-link">
             Calculadora de Amortização SAC
           </a>
