--- a/index.html
+++ b/index.html
@@ -263,6 +263,9 @@
       <div class="additional-tools-footer">
         <span class="tools-label">Ferramentas:</span>
         <div class="tools-links">
+          <a href="index.html" class="tool-footer-link">
+            Calculadora Financeira
+          </a>
           <a href="amortizacao.html" class="tool-footer-link">
             Calculadora de Amortização SAC
           </a>
