--- a/vpl.html
+++ b/vpl.html
@@ -24,6 +24,10 @@
       <p>Valor Presente Líquido - Análise de Viabilidade de Investimentos</p>
     </div>
 
+    <button class="btn-back" onclick="history.back()">
+      ← Voltar
+    </button>
+
     <!-- Seção de Entrada de Dados -->
     <div class="input-section">
       <h2>Dados do Investimento</h2>
@@ -88,6 +92,9 @@
       <div class="additional-tools-footer">
         <span class="tools-label">Ferramentas:</span>
         <div class="tools-links">
+          <a href="index.html" class="tool-footer-link">
+            Calculadora Financeira
+          </a>
           <a href="amortizacao.html" class="tool-footer-link">
             Calculadora de Amortização SAC
           </a>
